--- a/html5reset-1.6.sass
+++ b/html5reset-1.6.sass
@@ -1,9 +1,8 @@
-/ 
-/ html5doctor.com Reset Stylesheet
-/ v1.6
-/ Last Updated: 2010-08-18
-/ Author: Richard Clark - http://richclarkdesign.com 
-/ Twitter: @rich_clark
+/* html5doctor.com Reset Stylesheet
+/* v1.6
+/* Last Updated: 2010-08-18
+/* Author: Richard Clark - http://richclarkdesign.com 
+/* Twitter: @rich_clark
 
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video
   margin: 0
@@ -43,14 +42,14 @@ a
   vertical-align: baseline
   background: transparent
 
-/ change colours to suit your needs
+/* change colours to suit your needs
 
 ins
   background-color: #ff9
   color: #000
   text-decoration: none
 
-/ change colours to suit your needs
+/* change colours to suit your needs
 
 mark
   background-color: #ff9
@@ -69,7 +68,7 @@ table
   border-collapse: collapse
   border-spacing: 0
 
-/ change border colour to suit your needs
+/* change border colour to suit your needs
 
 hr
   display: block
